--- a/content/docs/hanoi9-2016.md
+++ b/content/docs/hanoi9-2016.md
@@ -2,7 +2,16 @@
 title: "Đề thi HSG 9 Hà Nội 2015 - 2016"
 date: 2022-11-28T19:39:12+07:00
 katex: true
+tags:
+  - Exam
 ---
 
 <object data="/resources/pdf/hanoi2016.pdf" type="application/pdf" width="150%" height="800px" style="position: relative; left: -25%;">
 </object>
+
+#### [Tải đề bài và Test][link-de-bai]
+
+#### [Code tham khảo][code-tham-khao]
+
+[link-de-bai]: https://drive.google.com/drive/folders/179kgnMcysjSJUI26Bubqkke-Maqkb3Wp?usp=sharing
+[code-tham-khao]: /posts/codethamkhao-hanoi9-2016/
